# agentic-notebook-exp

./: README.md  agent_exp.html  core.html  debug_pyshacl.html  fair_agent_langgraph.html  index.html  pyproject.toml  search.json  settings.ini  sitemap.xml
_docs/: core.html  index.html  robots.txt  search.json  sitemap.xml
_proc/: 00_core.ipynb  index.ipynb  nbdev.yml
agentic_notebook_exp/: _modidx.py
nbs/: agent_exp.ipynb  debug_pyshacl.ipynb  fair_agent_langgraph.ipynb  index.ipynb
nbs/.pretzel/: index_embeddings.json
nbs/Josiah Carberry_Experiment001_MagnetSystem1-HRS750_2024-07-11/ro-crate/: ro-crate-metadata.json
nbs/ontology/: non-valid.ttl  pidinst-sh.ttl  ro-crate-context-short.jsonld  ro-crate-metadata.json  ro-crate-metadata.jsonld  rocrate-mim-shacl.ttl
